# bot_expense

./: .dockerignore  .env.example  .gitattributes  Cargo.toml  Containerfile  docker-compose.yml
assets/: expense_model_quant.onnx  expense_model_quant.onnx.data
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000000_init.rs
src/: db.rs  handlers.rs  main.rs  parser.rs  repos.rs  state.rs  utils.rs
src/entity/: banned.rs  expenses.rs  lib.rs  mod.rs  prelude.rs  users.rs
