[workspace]
members = [".", "migration"]

[package]
name = "bot_expense"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
migration = { path = "migration" }
ort = "2.0.0-rc.12"
tokenizers = "0.22.2"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
ndarray = "0.17.2"
anyhow = "1.0"
sea-orm = { version = "1.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono" ] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
